--- a/.github/workflows/azure-webapp-deploy.yml
+++ b/.github/workflows/azure-webapp-deploy.yml
@@ -26,17 +26,24 @@ jobs:
       run: dotnet build MyMvcApp.csproj --configuration Release --no-restore
 
     - name: Publish
-      run: dotnet publish MyMvcApp.csproj --configuration Release --output D:\a\MyMvcApp-Contact-Databse-Application\MyMvcApp-Contact-Databse-Application\bin\Release\net8.0\MyMvcApp --no-build
+      run: dotnet publish MyMvcApp.csproj --configuration Release --output ./publish --no-build
+
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v4
       with:
         name: dotnet-app
-        path: D:\a\MyMvcApp-Contact-Databse-Application\MyMvcApp-Contact-Databse-Application\bin\Release\net8.0\MyMvcApp
+        path: ./publish
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
       with:
         app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: D:\a\MyMvcApp-Contact-Databse-Application\MyMvcApp-Contact-Databse-Application\bin\Release\net8.0\MyMvcApp
+        package: ./publish
+        slot-name: production
+      env:
+        DOTNET_ROOT: /usr/share/dotnet
